<resources>
    <string name="app_name">ScutApp</string>
    <string name="title_activity_main_news">MainNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_signout">Sign out</string>


    <string name="home_second">Home Second</string>
    <string name="title_activity_first_page">FirstPage</string>

    <string name="menu_profile">Account Settings</string>
    <string name="menu_news">News</string>
    <string name="menu_state">COVID-19 Test</string>
    <string name="menu_map">Map</string>
    <string name="menu_talkto">Talk to Doctor</string>
    <string name="menu_statistics">Statistics</string>

    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
