<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_quiz_menu"
            android:title="@string/menu_state" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/menu_news" />
    </group>

        <item
            android:title="Communicate">
    <menu>
            <item android:id="@+id/nav_talkto"
                android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
                android:title="@string/menu_talkto"/>
    </menu>
        </item>

    <item
        android:title="Configurate">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_settings_applications_black_24dp"
                android:title="@string/menu_profile"/>
        </menu>
    </item>
</menu>
